--- a/backend/Cargo.toml
+++ b/backend/Cargo.toml
@@ -8,3 +8,5 @@ axum = "0.8.1"
 serde = { version = "1.0.217", features = ["derive"] }
 serde_json = "1.0.138"
 tokio = { version = "1.43.0", features = ["full"] }
+utoipa = { version = "5.3.1", features = ["axum_extras"] }
+utoipa-swagger-ui = { version = "9.0.0", features = ["axum"] }
